--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -30,9 +30,15 @@ url: "imperialsim.github.io" # the base hostname & protocol for your site, e.g. 
 # Build settings
 # theme: minima
 markdown: kramdown
-remote_theme:  mmistakes/minimal-mistakes 
+remote_theme: "mmistakes/minimal-mistakes@4.13.0"
 plugins:
   - jekyll-feed
+  - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-gist
+  - jekyll-feed
+  - jemoji
+  - jekyll-include-cache
 
 # Exclude from processing.
 # The following items will not be processed, by default.
